xong html phần header-top

--- a/index.html
+++ b/index.html
@@ -95,9 +95,38 @@
     <link rel="stylesheet" href="./acset/reset.css" />
     <!-- css -->
     <link rel="stylesheet" href="./acset/style.css" />
-    <title>Document</title>
+    <title>shine smile</title>
   </head>
-  <body>
-    <h1>Nguyễn Văn Khẩn</h1>
+  <body style="height: 10000vh">
+    <header class="header">
+      <div class="container">
+        <!-- header - top -->
+        <div class="header-top">
+          <!-- logo -->
+          <div class="logo">
+            <a href="#!"
+              ><img src="./acset/img/Logo.svg" alt="shine smile"
+            /></a>
+          </div>
+          <!-- nav -->
+          <div class="nav">
+            <ul class="nav__list">
+              <li class="nav__item"><a href="#!" class="nav_link">Home</a></li>
+              <li class="nav__item">
+                <a href="#!" class="nav_link">Services</a>
+              </li>
+              <li class="nav__item"><a href="#!" class="nav_link">About</a></li>
+              <li class="nav__item">
+                <a href="#!" class="nav_link">Doctors</a>
+              </li>
+            </ul>
+          </div>
+          <!-- action -->
+          <div class="action">
+            <a href="#!" class="action__login">Log In</a>
+            <a href="#!" class="action__signup">Sign Up</a>
+        </div>
+      </div>
+    </header>
   </body>
 </html>
