--- a/index.html
+++ b/index.html
@@ -92,9 +92,9 @@
       rel="stylesheet"
     />
     <!-- reset css -->
-    <link rel="stylesheet" href="./acset/reset.css" />
+    <link rel="stylesheet" href="./acset/css/reset.css" />
     <!-- css -->
-    <link rel="stylesheet" href="./acset/style.css" />
+    <link rel="stylesheet" href="./acset/css/style.css" />
     <title>shine smile</title>
   </head>
   <body style="height: 10000vh">
@@ -111,7 +111,9 @@
           <!-- nav -->
           <div class="nav">
             <ul class="nav__list">
-              <li class="nav__item"><a href="#!" class="nav_link">Home</a></li>
+              <li class="nav__item">
+                <a href="#!" class="nav_link nav__link--ellip">Home</a>
+              </li>
               <li class="nav__item">
                 <a href="#!" class="nav_link">Services</a>
               </li>
@@ -125,6 +127,35 @@
           <div class="action">
             <a href="#!" class="action__login">Log In</a>
             <a href="#!" class="action__signup">Sign Up</a>
+          </div>
+        </div>
+        <!-- Header-bottom -->
+        <div class="header__bottom">
+          <!-- header - left -->
+          <section class="header__left">
+            <h2 class="heading__2">Exceptional dental care for all ages.</h2>
+            <p class="page__1">
+              Exceptional dental care for all ages. Your great smile begins with
+              a great dentist.
+            </p>
+            <div class="button__and_p">
+              <a href="#!" class="button__primary">Book Online</a>
+              <span class="page__2">or call (123) 456-7890</span>
+            </div>
+          </section>
+          <!-- header - right -->
+          <div class="header__right">
+            <img
+              src="./acset/img/anh1.svg"
+              alt="doctor"
+              class="header__bottom--img1"
+            />
+            <img
+              src="./acset/img/anh2.svg"
+              alt="doctor"
+              class="header__bottom--img2"
+            />
+          </div>
         </div>
       </div>
     </header>
