--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
     <title>shine smile</title>
   </head>
   <body style="height: 10000vh">
+    <!-- header  -->
     <header class="header">
       <div class="container">
         <!-- header - top -->
@@ -159,5 +160,141 @@
         </div>
       </div>
     </header>
+    <!-- main -->
+    <main class="main">
+      <!-- our - serice -->
+      <section>
+        <div class="container">
+          <!-- main-top -->
+          <div class="main__top">
+            <h2 class="heading__2">Our services</h2>
+            <p class="page__3">
+              Exceptional dental care for all ages. Your great smile begins with
+              a great dentist.
+            </p>
+          </div>
+          <!-- main-bottom -->
+          <div class="main__bottom">
+            <!-- main-bottom-left -->
+            <figure class="main-bottom-left">
+              <img src="/acset/img/anh4.png" alt="doctor" />
+            </figure>
+            <!-- main-bottom-right -->
+            <div class="main-bottom-right">
+              <!-- item1 -->
+              <div class="main-bottom-right__item">
+                <figure class="img3">
+                  <img src="./acset/img/anh3.png" alt="rang" />
+                </figure>
+                <div class="item--list">
+                  <p class="page4">Oral Surgery</p>
+                  <p class="page5">
+                    Everything you expect and then some. Cleanings, fillings,
+                    and x-rays.
+                  </p>
+                </div>
+              </div>
+              <!-- item2 -->
+              <div class="main-bottom-right__item">
+                <img src="./acset/img/anh3.png" alt="rang" />
+                <div class="item--list">
+                  <p class="page4">Oral Surgery</p>
+                  <p class="page5">
+                    Everything you expect and then some. Cleanings, fillings,
+                    and x-rays.
+                  </p>
+                </div>
+              </div>
+              <!-- item3 -->
+              <div class="main-bottom-right__item">
+                <img src="./acset/img/anh3.png" alt="rang" />
+                <div class="item--list">
+                  <p class="page4">Oral Surgery</p>
+                  <p class="page5">
+                    Everything you expect and then some. Cleanings, fillings,
+                    and x-rays.
+                  </p>
+                </div>
+              </div>
+              <!-- button -->
+              <a href="!#" class="btn-all">All Services</a>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Work -->
+      <section class="section__main">
+        <div class="container">
+          <!-- Word left -->
+          <div class="work__left">
+            <h2 class="heading__3">How it works</h2>
+            <p class="page__6">
+              Exceptional dental care for all ages. Your great smile begins with
+              a great dentist.
+            </p>
+          </div>
+          <!-- Word right -->
+          <div class="word-right">
+            <!-- item 1 -->
+            <div class="word__seach">
+              <img src="./acset/img/Orion_search.svg" alt="seach" />
+              <h3 class="heading__4">Search doctor</h3>
+              <p class="page7">
+                Search a doctor by education, qualifications or
+                experience-contact for inquiry.
+              </p>
+              <a href="#!">Learn More</a>
+            </div>
+            <!-- item 2 -->
+            <div class="word__seach">
+              <img src="./acset/img/Orion_find-user.svg" alt="sreach" />
+              <h3 class="heading__4">Find best doctor</h3>
+              <p class="page7">
+                Search a doctor by education, qualifications or
+                experience-contact for inquiry.
+              </p>
+              <a href="#!">Learn More</a>
+            </div>
+            <!-- item 3 -->
+            <div class="word__seach">
+              <img src="./acset/img/Orion_first-aid-kit.svg" alt="sreach" />
+              <h3 class="heading__4">Get treatment</h3>
+              <p class="page7">
+                Search a doctor by education, qualifications or
+                experience-contact for inquiry.
+              </p>
+              <a href="#!">Learn More</a>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- testimonial -->
+      <section class="tes-ainm">
+        <div class="container">
+          <!-- testimonial - top -->
+          <div class="testimonial__top">
+            <img
+              src="./acset/img/Rectangle 4450.svg"
+              alt="doctor"
+              class="img_1"
+            />
+            <img
+              src="./acset/img/Rectangle 4449.svg"
+              alt="doctor"
+              class="img-2"
+            />
+          </div>
+          <!-- testimonial - bottom -->
+          <div class="testimonial__bottom">
+            <h2 class="heading-4">Take back your smile with shine.</h2>
+            <p class="page-8">
+              If you’re missing multiple teeth due to decay, injury, or the
+              natural aging process, dentures might be the perfect solution.
+            </p>
+            <a href="#!" class="btn-lead">Learn More</a>
+          </div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
