--- a/index.html
+++ b/index.html
@@ -295,6 +295,101 @@
           </div>
         </div>
       </section>
+      <!-- team -->
+      <section class="team">
+        <div class="container">
+          <!-- team - top -->
+          <div class="team__top">
+            <h2 class="heading-5">Our virtual dentist</h2>
+            <a href="#!" class="btn-met">Meet our dentist</a>
+          </div>
+          <!-- team - bottom -->
+          <div class="team__bottom">
+            <!-- item - 1 -->
+            <div class="item__all">
+              <div class="img">
+                <img
+                  src="./acset/img/doctor-with-his-arms-crossed-white-background_ccexpress.svg"
+                  alt=""
+                  class="img-3"
+                />
+              </div>
+              <p class="page-9">Dr. Essence Page</p>
+              <p class="page-10">DDS, California - Linda University</p>
+            </div>
+            <!-- item - 2 -->
+            <div class="item__all">
+              <div class="img">
+                <img
+                  src="./acset/img/portrait-smiling-handsome-male-doctor-man_ccexpress.svg"
+                  alt=""
+                  class="img-3"
+                />
+              </div>
+              <p class="page-9">Dr. Essence Page</p>
+              <p class="page-10">DDS, California - Linda University</p>
+            </div>
+            <!-- item - 3 -->
+            <div class="item__all">
+              <div class="img">
+                <img
+                  src="./acset/img/hospital-healthcare-workers-covid-19-treatment-concept-young-doctor-scrubs-making-daily-errands-clinic-listening-patient-symptoms-look-camera-professional-physician-curing-diseases_ccexpress.svg"
+                  alt=""
+                  class="img-3"
+                />
+              </div>
+              <p class="page-9">Dr. Essence Page</p>
+              <p class="page-10">DDS, California - Linda University</p>
+            </div>
+            <!-- item - 4  -->
+            <div class="item__all">
+              <div class="img">
+                <img
+                  src="./acset/img/healthcare-workers-coronavirus-covid-19-pandemic-insurance-concept-close-up-serious-young-doctor-white-coat-glasses-listen-closely-patient-cross-arms-chest-holding-stethoscope_ccexpress 1.svg"
+                  alt=""
+                  class="img-3"
+                />
+              </div>
+              <p class="page-9">Dr. Essence Page</p>
+              <p class="page-10">DDS, California - Linda University</p>
+            </div>
+          </div>
+          <!-- btn-left-right -->
+          <div class="btn-left-right">
+            <a href="#!" class="btn-left">
+              <img src="./acset/img/Vector 1.png" alt="left" />
+            </a>
+            <a href="#!" class="btn-right">
+              <img src="./acset/img/Vector 2.png" alt="right" />
+            </a>
+        </div>
+      </section>
+      <!-- cta -->
+       <section class="cta">
+        <div class="container">
+          <div class="cta-all">
+          <!-- left -->
+          <figure class="cta__left">
+            <img src="./acset/img/Rectangle.png" alt="" class="img__6">
+           </figure>
+           <!-- right -->
+            <div class="cta__right">
+              <h2 class="heading-6">Take back your smile with dentures</h2>
+              <p class="page-11">
+                If you’re missing multiple teeth due to decay, injury, or the natural aging process, dentures might be the perfect solution.
+              </p>
+              <div class="ga">
+                <a href="#!" class="btn-ag btn-gg">
+                  <img src="./acset/img/Google Play outline badge.svg" alt="google" class="img-4">
+                </a>
+                 <a href="#!" class="btn-ag btn-as">
+                  <img src="./acset/img/App Store outline badge.svg" alt="appstore" class="img-5">
+                </a>
+              </div>
+            </div>
+            </div>
+        </div>
+       </section>
     </main>
   </body>
 </html>
