--- a/index.html
+++ b/index.html
@@ -390,6 +390,55 @@
             </div>
         </div>
        </section>
+       <!-- Bolg -->
+        <section class="blog">
+          <div class="container">
+            <div class="blog-all">
+            <!-- blog - left -->
+            <div class="blog__left">
+              <h2 class="heading-7">Read Latest News & Events.</h2>
+              <p class="page-12">Read All Blogs</p>
+              <figure class="left-fig">
+                  <a href="#!" class="els els--ml">
+                    <img src="./acset/img/Vector 1.png" alt=""></img>
+                  </a>
+                  <a href="#!" class="els els--mr">
+                    <img src="./acset/img/Vector 2.png" alt="" class="ah"></img>
+                  </a>
+              </figure>
+              </div>
+            <!-- blog - right -->
+            <div class="blog__right">
+              <!-- item - 1 -->
+              <div class="blog-right__item">
+                <img src="./acset/img/Image (3).svg" alt="blog" class="img-7">
+                <div class="blog-lr">
+                  <h3 class="page-12">
+                    Key Considerations for Regulatory Compliant.
+                  </h3>
+                  <p class="page-13">
+                    It’s easy to think about medical care from a narrow perspective. You go to the hospital.
+                  </p>
+                  <a href="#!" class="learn">Learn More</a>
+                </div>
+              </div>
+              <!-- item - 2 -->
+                <div class="blog-right__item">
+                <img src="./acset/img/Image (4).svg" alt="blog" class="img-7">
+                <div class="blog-lr">
+                  <p class="page-12">
+                    Key Considerations for Regulatory Compliant.
+                  </p>
+                  <p class="page-13">
+                    It’s easy to think about medical care from a narrow perspective. You go to the hospital.
+                  </p>
+                  <a href="#!" class="learn">Learn More</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          </div>
+        </section>
     </main>
   </body>
 </html>
