--- a/index.html
+++ b/index.html
@@ -439,6 +439,111 @@
           </div>
           </div>
         </section>
+        <!-- cta-2 -->
+         <section class="cta-2">
+          <div class="container">
+            <h2 class="heading-8">
+              Always welcoming new patients
+            </h2>
+            <hr class="hr-1">
+            <p class="page-13">
+              Take control of your dental health and get the personalized care you deserve. Call (541) 772-8846 to  schedule
+            </p>
+            <a href="#!" class="btn-cta2">Appointment</a>
+          </div>
+         </section>
     </main>
+    <!-- footer -->
+    <footer class="footer">
+      <div class="container">
+        <!-- top -->
+        <div class="footer-top">
+          <!-- footer - left -->
+          <div class="footer__left">
+            <div class="logo--footer">
+              <a href="#!"
+                ><img src="./acset/img/Logo.svg" alt="shine smile"
+              /></a>
+            </div>
+            <p class="page-14">
+              Exceptional dental care for all ages. Your great smile begins
+              with a great dentist.
+            </p>
+          </div>
+          <!-- footer - right -->
+          <div class="footer__right">
+            <!-- item - 1 -->
+            <div class="footer-top1">
+            <div class="footer-top__item">
+              <h3 class="heading-9">Support</h3>
+              <ul class="footer-list-item">
+                <li><a href="#!">Help centet</a></li>
+                <li><a href="#!">Account information</a></li>
+                <li><a href="#!">About</a></li>
+                <li><a href="#!">Contact</a></li>
+              </ul>
+            </div>
+            <div class="footer-bottom__item">
+              <h3 class="heading-9">Support</h3>
+              <ul class="footer-list">
+                <li><a href="#!">Help centet</a></li>
+                <li><a href="#!">Account information</a></li>
+              </ul>
+            </div>
+            </div>
+            <!-- item - 2 -->
+            <div class="footer-top1">
+            <div class="footer-top__item fti">
+              <h3 class="heading-9">Support</h3>
+              <ul class="footer-list-item">
+                <li><a href="#!">Help Center</a></li>
+                <li><a href="#!">Account information</a></li>
+              </ul>
+            </div>
+            <div class="footer-bottom__item ftih">
+              <h3 class="heading-9">Support</h3>
+              <ul class="footer-list">
+                <li><a href="#!">Help centet</a></li>
+              </ul>
+            </div>
+            </div>
+            <!-- item - 3 -->
+            <div class="footer-top1">
+              <div class="footer-top__item fti-3">
+                <h3 class="heading-9">Stay In Touch</h3>
+                <div class="fsi">
+                  <a href="" class="a-item item">
+                    <img src="./acset/img/Vector.png" alt="facebook" class="fsi-item">
+                  </a>
+                   <a href="#!" class="a-item">
+                    <img src="./acset/img/Vector (1).png" alt="swticher" class="fsi-item">
+                  </a>
+                   <a href="#!" class="a-item">
+                    <img src="./acset/img/Vector (2).png" alt="in" class="fsi-item">
+                  </a>
+                </div>
+              </div>
+              <div class="footer-bottom__item">
+                <h3 class="heading-9">Subscribe</h3>
+                <ul class="footer-list">
+                  <li><a href="#!" class="ali">Subscribe our newsletter for the latest update of Dental care  </a></li>
+                </ul>
+                <div class="bar">
+                  <input type="text" placeholder="Enter your email" class="input-email">
+                  <a href="#!" class="btn-subscribe">Subscribe</a>
+                </div>
+            </div>
+          </div>
+        </div>
+      </div>
+         <!-- bottom -->
+        <div class="fb">
+          <hr class="hr-2">
+          <p class="page-14">
+            2021 GDN. Copyright and All rights reserved.
+          </p>
+        </div>
+        </div>
+    </footer>
   </body>
 </html>
