--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
           <div class="main__bottom">
             <!-- main-bottom-left -->
             <figure class="main-bottom-left">
-              <img src="/acset/img/anh4.png" alt="doctor" />
+              <img src="/acset/img/anhg.png" alt="doctor" />
             </figure>
             <!-- main-bottom-right -->
             <div class="main-bottom-right">
