--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     <link rel="stylesheet" href="./acset/css/style.css" />
     <title>shine smile</title>
   </head>
-  <body style="height: 10000vh">
+  <body>
     <!-- header  -->
     <header class="header">
       <div class="container">
