--- a/index.html
+++ b/index.html
@@ -95,10 +95,11 @@
     <link rel="stylesheet" href="./acset/css/reset.css" />
     <!-- css -->
     <link rel="stylesheet" href="./acset/css/style.css" />
+    <link rel="stylesheet" href="./acset/css/reponsive.css" />
     <title>shine smile</title>
   </head>
   <body>
-    <!-- header  -->
+    <!-- header  -->  
     <header class="header">
       <div class="container">
         <!-- header - top -->
@@ -106,12 +107,12 @@
           <!-- logo -->
           <div class="logo">
             <a href="#!"
-              ><img src="./acset/img/Logo.svg" alt="shine smile"
+              ><img src="./acset/img/Logo.svg" alt="shine smile" x class="logo-img"
             /></a>
           </div>
           <!-- nav -->
-          <div class="nav">
-            <ul class="nav__list">
+          <nav class="nav">
+            <ul class="nav__list" id="nav__list-pc">
               <li class="nav__item">
                 <a href="#!" class="nav_link nav__link--ellip">Home</a>
               </li>
@@ -123,7 +124,7 @@
                 <a href="#!" class="nav_link">Doctors</a>
               </li>
             </ul>
-          </div>
+          </nav>
           <!-- action -->
           <div class="action">
             <a href="#!" class="action__login">Log In</a>
@@ -160,6 +161,35 @@
         </div>
       </div>
     </header>
+    <!-- Talet mobile menu -->
+     <div class="mobile-header">
+      <input type="checkbox" name="menu-list" id="menu-list" hidden>
+      
+      <label for="menu-list" class="mobile-header__icon-menu">
+        <svg class="mobile-header__menu" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 640">
+          <path fill="currentColor" d="M544 128C544 110.3 529.7 96 512 96L128 96C110.3 96 96 110.3 96 128C96 145.7 110.3 160 128 160L512 160C529.7 160 544 145.7 544 128zM544 384C544 366.3 529.7 352 512 352L128 352C110.3 352 96 366.3 96 384C96 401.7 110.3 416 128 416L512 416C529.7 416 544 401.7 544 384zM96 256C96 273.7 110.3 288 128 288L512 288C529.7 288 544 273.7 544 256C544 238.3 529.7 224 512 224L128 224C110.3 224 96 238.3 96 256zM544 512C544 494.3 529.7 480 512 480L128 480C110.3 480 96 494.3 96 512C96 529.7 110.3 544 128 544L512 544C529.7 544 544 529.7 544 512z"/></svg>      
+      </label>
+      <label for="menu-list" class="overlay">
+      </label>
+      <div class="nav-mobile">
+        <div class="nav-logo" id="nav-ngu">
+          <a href=""><img src="./acset/img/Logo.svg" alt="shine smile" class="logo-imgg"/></a>
+          <label for="menu-list">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 640">
+              <path fill="currentColor" d="M320 112C434.9 112 528 205.1 528 320C528 434.9 434.9 528 320 528C205.1 528 112 434.9 112 320C112 205.1 205.1 112 320 112zM320 576C461.4 576 576 461.4 576 320C576 178.6 461.4 64 320 64C178.6 64 64 178.6 64 320C64 461.4 178.6 576 320 576zM231 231C221.6 240.4 221.6 255.6 231 264.9L286 319.9L231 374.9C221.6 384.3 221.6 399.5 231 408.8C240.4 418.1 255.6 418.2 264.9 408.8L319.9 353.8L374.9 408.8C384.3 418.2 399.5 418.2 408.8 408.8C418.1 399.4 418.2 384.2 408.8 374.9L353.8 319.9L408.8 264.9C418.2 255.5 418.2 240.3 408.8 231C399.4 221.7 384.2 221.6 374.9 231L319.9 286L264.9 231C255.5 221.6 240.3 221.6 231 231z"/></svg>
+          
+          </label>
+        </div>
+        <!-- nav cho mobile -->
+        <ul id="nav__list-mobile"></ul>
+         <script>
+          const navListPc = document.getElementById('nav__list-pc');
+          const navListMobile = document.getElementById('nav__list-mobile');
+          navListMobile.innerHTML = navListPc.innerHTML;
+         </script>
+      </div>
+    </div>
+
     <!-- main -->
     <main class="main">
       <!-- our - serice -->
