--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
           <div class="main__bottom">
             <!-- main-bottom-left -->
             <figure class="main-bottom-left">
-              <img src="/acset/img/anhg.png" alt="doctor" />
+              <img src="/acset/img/Rectangle 19.svg" alt="doctor" />
             </figure>
             <!-- main-bottom-right -->
             <div class="main-bottom-right">
