xong reponsive  cho tablet

--- a/index.html
+++ b/index.html
@@ -503,7 +503,7 @@
           <!-- footer - right -->
           <div class="footer__right">
             <!-- item - 1 -->
-            <div class="footer-top1">
+            <div class="footer-top1 ft-h">
             <div class="footer-top__item">
               <h3 class="heading-9">Support</h3>
               <ul class="footer-list-item">
