--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
           <nav class="nav">
             <ul class="nav__list" id="nav__list-pc">
               <li class="nav__item ">
-                <a href="#!" class="nav_link nav__link--ellip">Home</a>
+                <a href="#!" class="nav_link nav__link--ellip nav_home">Home</a>
               </li>
               <li class="nav__item nav-tablet">
                 <a href="#!" class="nav_link">Services</a>
