--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
           <div class="main__bottom">
             <!-- main-bottom-left -->
             <figure class="main-bottom-left">
-              <img src="/acset/img/anhdoctor.webp" alt="doctor" />
+              <img src="/acset/img/anhdoctor.png" alt="doctor" />
             </figure>
             <!-- main-bottom-right -->
             <div class="main-bottom-right">
